--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
 
   google_mlkit_commons: any
   google_mlkit_face_mesh_detection: ^0.2.0
+  intl: ^0.19.0
+  audioplayers: ^6.1.0
 
 
 dev_dependencies:
@@ -53,8 +55,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
